[gd_scene load_steps=8 format=2]

[ext_resource path="res://hud/score.png" type="Texture" id=1]
[ext_resource path="res://hud/hi.png" type="Texture" id=2]
[ext_resource path="res://hud/bonus-box.png" type="Texture" id=3]
[ext_resource path="res://freddy/freddy.png" type="Texture" id=4]
[ext_resource path="res://hud/DigitalDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://hud/HUD.gd" type="Script" id=6]
[ext_resource path="res://hud/LevelDisplay.tscn" type="PackedScene" id=7]

[node name="HUD" type="Node2D"]
script = ExtResource( 6 )

[node name="Score" type="Sprite" parent="."]
position = Vector2( 152, 8 )
texture = ExtResource( 1 )

[node name="Hi" type="Sprite" parent="."]
position = Vector2( 320, 8 )
texture = ExtResource( 2 )

[node name="BonusBox" type="Sprite" parent="."]
position = Vector2( 488, 19 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 560, 22 )
texture = ExtResource( 4 )
hframes = 2
vframes = 2

[node name="ScoreDisplay" parent="." instance=ExtResource( 5 )]
position = Vector2( 200, 8 )
value = 0

[node name="HiDisplay" parent="." instance=ExtResource( 5 )]
position = Vector2( 344, 8 )
value = 5000

[node name="BonusDisplay" parent="." instance=ExtResource( 5 )]
position = Vector2( 464, 24 )
digits = 4
value = 3000

[node name="LivesDisplay" parent="." instance=ExtResource( 5 )]
position = Vector2( 592, 24 )
digits = 1
value = 3

[node name="LevelDisplay" parent="." instance=ExtResource( 7 )]
position = Vector2( 136, 36 )
level = 0
